implemented a web service for receiving weather

--- a/WeatherForecast/appsettings.json
+++ b/WeatherForecast/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=WeatherDb;Trusted_Connection=True;Encrypt=False"
+  },
+  "WeatherApi": {
+    "ApiKey": "c0e014cd640e0e622143b716baf49b34"
+  },
+  "WeatherService": {
+    "RefreshIntervalInMinutes": 60
+  }
 }
